<resources>
    <string name="app_name">TripLogs</string>
    <string name="trip_start">trip start</string>
    <string name="trip_stop">stop</string>
    <string name="allow">Allow Location</string>
    <string name="trip_start_stop">Trip Start/Stop</string>
    <string name="trip_log">Trip Log</string>
    <string name="continue_">Continue</string>
    <string name="enter_server_code_to_connect_server">Enter Server code to connect server</string>
    <string name="speed">Speed: </string>
    <string name="altitude">Altitude: </string>
    <string name="heading">Heading: </string>
    <string name="latitude">Latitude: </string>
    <string name="longitude">Longitude: </string>
    <string name="accuracy">Accuracy: </string>
    <string name="timestamp">Timestamp: </string>
    <string name="v_1_0_1">V 1.0.1</string>
    <string name="mhp">MPH</string>
    <string name="kmh">KMH</string>
    <string name="device_id">DeviceID:</string>
    <string name="do_you_want_to_change_your_server_configuration">Do you want to change your server configuration ?</string>
</resources>