<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".user.Home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/sky_blue"
            card_view:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/trip_log"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/img_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="12dp"
                    android:src="@drawable/ic_settings" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            card_view:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:background="@color/white"
                android:padding="6dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                       android:textColor="@color/black"
                        android:text="@string/trip_start_stop" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_card"
                        android:layout_width="66dp"
                        android:layout_height="36dp"
                        app:cardBackgroundColor="@color/white"
                        card_view:cardCornerRadius="20dp"
                        card_view:cardElevation="3dp">

                        <com.jtv7.rippleswitchlib.RippleSwitch
                            android:id="@+id/rippleSwitch"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:elevation="6dp"
                            app:rs_checked_color="#FFFFFF"
                            app:rs_unchecked_color="#0074ea" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:background="#6C6A6A"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="24dp"
                   >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/device_id"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/tv_device_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/longitude"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/tv_longitude"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/latitude"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/tv_latitude"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/accuracy"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/tv_accuracy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/altitude"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/tv_altitude"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/speed"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/tv_speed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
android:visibility="gone"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/heading"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/tv_heading"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black" />

                    </LinearLayout>











                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:visibility="gone"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/timestamp"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/tv_timestamp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black" />

                    </LinearLayout>





                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:orientation="horizontal"
                    >

                    <RadioButton
                        android:id="@+id/radioButton1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mhp"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                    <View
                        android:layout_width="40dp"
                        android:layout_height="match_parent"

                        />
                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/kmh"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:layout_marginTop="10dp"/>

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

<!--        android:background="@drawable/background_border_black"-->

    </LinearLayout>


    <TextView
        android:id="@+id/tv_v_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="36dp"
        />


</RelativeLayout>